# Speech_to_text_LLM

./: .gitignore  README.md  dockerfile  pyproject.toml  test_voice_enrollments.ipynb
app/: aws_main.py  consultant_ws.py  doct_ws.py  main.py  main1.py  main2.py
static/: index.html
